Added link to portfolio.

--- a/index.htm
+++ b/index.htm
@@ -106,10 +106,9 @@ background-color: grey;
       </footer>
       <div class="footer-copyright">
             <div class="container text-center hoverable">
-              <h4 class = "card"> &copy; Prateek Dubey </h4>
+              <a href = "https://sh0onya.github.io/PrAtEek/"><h4 class = "card"> &copy; Prateek Dubey </h4></a>
         </div>
       </div>
     </div>
-
   </body>
 </html>
